# spk

./: .clippy.toml  .coveragerc  .dockerignore  .env  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .spdev.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  Makefile.linux  Makefile.macos  Makefile.windows  OPEN_SOURCE_PLAN.md  Pipfile  README.md  SECURITY.md  THIRD_PARTY.md  build.go  build_packages.sh  codecov.yml  conftest.py  cspell.json  gcc48.spm.yaml  go.mod  go.sum  handle.go  mypy.ini  pyproject.toml  pytest.ini  release.go  rpmbuild.Dockerfile  self.spk.yaml  setup.py  spec.go  spec_test.go  spfs.spec  (+8 more)
crates/is_default_derive_macro/: Cargo.toml
crates/is_default_derive_macro/src/: lib.rs
crates/sentry-miette/: Cargo.toml
crates/sentry-miette/src/: lib.rs
crates/spfs/: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pydocstyle.ini  .pylintrc  .spdev.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  OPEN_SOURCE_PLAN.md  Pipfile  README.md  build.rs  build.sh  build_rpm.sh  conftest.py  mypy.ini  project.yaml  pytest.ini  rpmbuild.Dockerfile  setcaps_debug.sh  setup.py  spenv.spec  spfs.spec
crates/spfs-encoding/: Cargo.toml
crates/spfs-encoding/src/: binary.rs  binary_test.rs  error.rs  hash.rs  hash_test.rs  lib.rs
crates/spfs-proto/: Cargo.toml  build.rs  sgconfig.yml
crates/spfs-proto/ast-grep/rules/: replace-digest-bytes-debug.yaml
crates/spfs-proto/schema/: spfs.fbs
crates/spfs-proto/src/: .gitignore  digest.rs  digest_test.rs  lib.rs  spfs_generated.rs
crates/spfs-storage/: Cargo.toml
crates/spfs-storage/src/: blob.rs  config.rs  layer.rs  layer_test.rs  manifest_test.rs  platform_test.rs  repository.rs
crates/spfs-storage/src/fs/: hash_store_test.rs  renderer.rs  tag_test.rs
crates/spfs-storage/src/rpc/: payload.rs
crates/spfs-storage/src/tar/: repository.rs
crates/spfs-vfs/: Cargo.toml  build.rs
crates/spfs-vfs/src/: error.rs  fuse.rs  lib.rs
crates/spfs-vfs/src/macos/: config.rs  handle.rs  mod.rs  mount.rs  process.rs  router.rs  scratch.rs  service.rs
crates/spfs-vfs/src/proto/: mod.rs
crates/spfs-vfs/src/winfsp/: handle.rs  mod.rs  mount.rs  router.rs
crates/spfs/.github/workflows/: codecov.yml  rpm.yml  rust.yml
crates/spfs/.site/spi/: .gitlab-ci.yml  .spdev.yaml  spfs.spec
crates/spfs/benches/: spfs_bench.rs
crates/spfs/docs/: _index.md  configuration.md  extensions.md  runtime.md  storage.md  usage.md
crates/spfs/docs/design/: _index.md  design.md  migrations.md  runtime.md
crates/spfs/spenv/: __init__.py  __main__.py  _bootstrap.py  _bootstrap_test.py  _commit.py  _config.py  _config_test.py  _features_test.py  _resolve.py  _resolve_test.py  _runtime.py  _runtime_storage.py  _runtime_storage_test.py  _runtime_test.py  _startup.sh  _sync.py  _sync_test.py  _workspace.py  _workspace_test.py  io.py
crates/spfs/spenv-enter/: main.c  steps.c
crates/spfs/spenv-mount/: main.c
crates/spfs/spenv-remount/: main.c
crates/spfs/spenv/cli/: __init__.py  _args.py  _cmd_commit.py  _cmd_info.py  _cmd_init.py  _cmd_pull.py  (+13 more)
crates/spfs/spfs/: __init__.py  __main__.py  _bootstrap.py  _bootstrap_test.py  _clean.py  _clean_test.py  _commit.py  _config.py  _config_test.py  _diff.py  _ls_tags.py  _prune.py  _prune_test.py  _resolve.py  _runtime.py  _runtime_test.py  _sync.py  _sync_test.py  io.py
crates/spfs/spfs-enter/: main.c  steps.c
crates/spfs/src/: _bootstrap_test.rs  _commit.py  _commit_test.py  _config.py  _resolve.rs  _resolve_test.py  _runtime_test.rs  bootstrap.rs  bootstrap_test.rs  check.rs  check_test.rs  clean.rs  clean_test.rs  commit.rs  commit_test.rs  config.rs  config_test.rs  diff.rs  env.rs  env_macos.rs  env_win.rs  error.rs  find_path.rs  fixtures.rs  io.py  io.rs  lib.rs  ls_tags.rs  monitor.rs  monitor_macos.rs  monitor_win.rs  prelude.rs  process.rs  process_macos.rs  prune.rs  prune_test.rs  repeating_timeout.rs  resolve.rs  resolve_test.rs  status.rs  (+6 more)
crates/spfstest/: Cargo.toml
crates/spfstest-macro/: Cargo.toml
crates/spfstest-macro/src/: lib.rs
crates/spfstest/src/: lib.rs
crates/spk-build/: Cargo.toml
crates/spk-build/src/: archive_test.rs  error.rs  lib.rs  report.rs
crates/spk-cli-common/: Cargo.toml
crates/spk-cli-common/src/: cli.rs  env.rs  error.rs  exec.rs  flags.rs  flags_test.rs  lib.rs  publish.rs  publish_test.rs
crates/spk-cli-group1/: Cargo.toml
crates/spk-cli-group1/src/: cmd_bake.rs  cmd_deprecate.rs  cmd_deprecate_test.rs  cmd_undeprecate_test.rs  lib.rs
crates/spk-cli-group2/: Cargo.toml
crates/spk-cli-group2/src/: cmd_ls.rs  cmd_ls_test.rs  cmd_new.rs  cmd_remove.rs
crates/spk-cli-group4/: Cargo.toml
crates/spk-cli-group4/src/: cmd_search.rs  cmd_view.rs
crates/spk-cmd-build/: Cargo.toml
crates/spk-cmd-build/src/: cmd_build.rs  lib.rs
crates/spk-cmd-convert/: Cargo.toml
crates/spk-cmd-convert/src/: cmd_convert.rs
crates/spk-cmd-make-binary/: Cargo.toml
crates/spk-cmd-make-binary/src/: cmd_make_binary.rs  lib.rs
crates/spk-cmd-make-source/: Cargo.toml
crates/spk-cmd-make-source/src/: cmd_make_source.rs
crates/spk-cmd-repo/: Cargo.toml
crates/spk-config/: Cargo.toml
crates/spk-config/src/: config.rs  config_test.rs  error.rs  lib.rs  metrics.rs
crates/spk-exec/: Cargo.toml
crates/spk-exec/src/: error.rs  exec.rs  exec_test.rs  lib.rs
crates/spk-foundation/: Cargo.toml
crates/spk-foundation/src/: lib.rs
crates/spk-graph/: Cargo.toml
crates/spk-graph/src/: lib.rs  package_connections.rs  packages_graph.rs
crates/spk-ident/: Cargo.toml
crates/spk-ident-build/: Cargo.toml
crates/spk-ident-build/src/: build.rs  build_test.rs  error.rs  format.rs
crates/spk-ident-component/: Cargo.toml
crates/spk-ident-component/src/: component_spec.rs  lib.rs
crates/spk-ident/src/: error.rs  format.rs  ident.rs  ident_test.rs  lib.rs  request.rs  request_test.rs
crates/spk-launcher/: Cargo.toml  README.md
crates/spk-launcher/src/: main.rs
crates/spk-name/: Cargo.toml
crates/spk-name/src/: error.rs  lib.rs  name.rs
spk-launcher/: Cargo.toml
spk-launcher/src/: main.rs
(+1736 files in other folders)
