[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "crates/is_default_derive_macro",
    "crates/progress_bar_derive_macro",
    "crates/spfs",
    "crates/spfs-encoding",
    "crates/spfs-proto",
    "crates/spk-build",
    "crates/spk-cli/*",
    "crates/spfs-cli/*",
    "crates/spk-exec",
    "crates/spk-config",
    "crates/spk-launcher",
    "crates/spk-schema",
    "crates/spk-schema/crates/*",
    "crates/spk-solve",
    "crates/spk-solve/crates/*",
    "crates/spk-storage",
    "crates/spk-workspace",
    "crates/spk",
]
resolver = "2"

[workspace.package]
authors = [
    "Ryan Bottriell <ryan@bottriell.ca>",
    "J Robert Ray <jrray@imageworks.com>",
    "David Gilligan-Cook <dcook@imageworks.com>",
    "Nichol Yip <nichyip14@gmail.com>",
]
edition = "2021"
version = "0.42.0"
license-file = "LICENSE"
homepage = "https://spkenv.dev"
repository = "https://github.com/spkenv/spk"
readme = "README.md"
description = "SPK is a Package Manager for high-velocity software environments, built on SPFS. SPFS is a system for filesystem isolation, capture, and distribution."


[workspace.dependencies]
arc-swap = "1.6.0"
async-trait = "0.1"
bracoxide = "0.1.4"
bytes = "1.5"
cached = "0.48.1"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.3"
colored = "2.0.0"
config = "0.14.0"
console = "0.15.8"
dashmap = "5.4.0"
derive_builder = "0.20"
data-encoding = "2.3"
dirs = "5.0"
dunce = "1.0.4"
dyn-clone = "1.0"
enum_dispatch = "0.3.13"
flatbuffers = "23.5.26"
format_serde_error = { version = "0.3", default-features = false }
fuser = "0.14.0"
futures = "0.3.28"
futures-core = "0.3.28"
glob = "0.3"
indicatif = "0.17.8"
indexmap = "2.2"
itertools = "0.12"
is_default_derive_macro = { path = "crates/is_default_derive_macro" }
libc = "0.2.80"
miette = "7.0"
nix = { version = "0.27.1", features = ["mount", "sched", "user"] }
nom = "7.1"
nom-supreme = "0.8"
once_cell = "1.8"
parsedbuf = { path = "crates/parsedbuf" }
pin-project-lite = "0.2.0"
procfs = "0.16.0"
progress_bar_derive_macro = { path = "crates/progress_bar_derive_macro" }
prost = "0.12.1"
rand = "0.8.5"
regex = "1.6"
relative-path = "1.3"
ring = "0.17.7"
rstest = "0.18.2"
sentry = { version = "0.34.0", default-features = false, features = [
    # all the default features except `debug-images` which causes a deadlock on
    # centos 7: https://github.com/getsentry/sentry-rust/issues/358
    "backtrace",
    "contexts",
    "panic",
    "transport",
] }
sentry-miette = { version = "0.1.0", path = "crates/sentry-miette" }
sentry-tracing = { version = "0.32.2" }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.25"
serial_test = "3.1"
shellexpand = "3.1.0"
spdx = "0.10"
spfs = { path = "crates/spfs" }
spfs-cli-common = { path = "crates/spfs-cli/common" }
spfs-encoding = { path = "crates/spfs-encoding" }
spfs-vfs = { path = "crates/spfs-vfs" }
spk-build = { path = "crates/spk-build" }
spk-cli-common = { path = "crates/spk-cli/common" }
spk-cli-group1 = { path = "crates/spk-cli/group1" }
spk-cli-group2 = { path = "crates/spk-cli/group2" }
spk-cli-group3 = { path = "crates/spk-cli/group3" }
spk-cli-group4 = { path = "crates/spk-cli/group4" }
spk-cmd-build = { path = "crates/spk-cli/cmd-build" }
spk-cmd-convert = { path = "crates/spk-cli/cmd-convert" }
spk-cmd-debug = { path = "crates/spk-cli/cmd-debug" }
spk-cmd-du = { path = "crates/spk-cli/cmd-du" }
spk-cmd-env = { path = "crates/spk-cli/cmd-env" }
spk-cmd-explain = { path = "crates/spk-cli/cmd-explain" }
spk-cmd-install = { path = "crates/spk-cli/cmd-install" }
spk-cmd-make-binary = { path = "crates/spk-cli/cmd-make-binary" }
spk-cmd-make-recipe = { path = "crates/spk-cli/cmd-make-recipe" }
spk-cmd-make-source = { path = "crates/spk-cli/cmd-make-source" }
spk-cmd-render = { path = "crates/spk-cli/cmd-render" }
spk-cmd-repo = { path = "crates/spk-cli/cmd-repo" }
spk-cmd-test = { path = "crates/spk-cli/cmd-test" }
spk-config = { path = "crates/spk-config" }
spk-exec = { path = "crates/spk-exec" }
spk-schema = { path = "crates/spk-schema" }
spk-schema-foundation = { path = "crates/spk-schema/crates/foundation" }
spk-schema-ident = { path = "crates/spk-schema/crates/ident" }
spk-schema-tera = { path = "crates/spk-schema/crates/tera" }
spk-solve = { path = "crates/spk-solve" }
spk-solve-graph = { path = "crates/spk-solve/crates/graph" }
spk-solve-macros = { path = "crates/spk-solve/crates/macros" }
spk-solve-package-iterator = { path = "crates/spk-solve/crates/package-iterator" }
spk-solve-solution = { path = "crates/spk-solve/crates/solution" }
spk-solve-validation = { path = "crates/spk-solve/crates/validation" }
spk-storage = { path = "crates/spk-storage" }
static_assertions = "1.1"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt"] }
tokio-retry = "0.3.0"
tonic = "0.11"
tonic-build = "0.11"
tower = "0.4.13"
tracing = "0.1.35"
tracing-capture = "0.1"
tracing-subscriber = "0.3.14"
ulid = "1.0"
whoami = "1.5"
windows = "0.51"
winfsp = { version = "0.9.3", default-features = false }
winfsp-sys = "0.2"
variantly = "0.4"

[workspace.lints.clippy]
fn_params_excessive_bools = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
