[package]
authors = ["J Robert Ray <jrray@imageworks.com>"]
name = "spk-launcher"
version = "0.33.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nix = "0.24.1"
spfs = { git = 'https://github.com/imageworks/spfs', tag = 'v0.34.4' }
tempdir = "0.3"
tokio = { version = "1.15", features = ["rt"] }
