[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spfs-encoding"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
data-encoding = { workspace = true }
ring = { workspace = true }
spfs-proto = { path = "../spfs-proto" }
tokio = { version = "1.20", features = ["io-util", "io-std"] }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
rstest = { version = "0.15.0", default-features = false }
rand = { workspace = true }
