[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spfs-encoding"
version = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = { workspace = true }

[lints]
workspace = true

[dependencies]
data-encoding = { workspace = true }
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
spfs-proto = { path = "../spfs-proto" }
tokio = { version = "1.43", features = ["io-util", "io-std"] }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
rstest = { version = "0.15.0", default-features = false }
rand = { workspace = true }
