[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spfs-vfs"
version = "0.34.6"

[features]
default = ["fuse-backend-abi-7-22"]
winfsp-backend = ["dep:tonic", "dep:prost", "dep:futures-core"]
fuse-backend = ["spfs/fuse-backend", "dep:fuser"]
fuse-backend-abi-7-22 = ["fuse-backend", "fuser/abi-7-22"]
fuse-backend-abi-7-25 = ["fuse-backend-abi-7-22", "fuser/abi-7-25"]
fuse-backend-abi-7-28 = ["fuse-backend-abi-7-25", "fuser/abi-7-28"]
fuse-backend-abi-7-31 = ["fuse-backend-abi-7-28", "fuser/abi-7-31"]
fuse-backend-rhel-7-6 = ["fuse-backend-abi-7-22"]
fuse-backend-rhel-7-9 = ["fuse-backend-abi-7-31"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures-core = { workspace = true, optional = true }
nix = { workspace = true, features = ["process"] }
libc = "0.2"
prost = { workspace = true, optional = true }
spfs = { path = "../spfs" }
tokio = { version = "1.20", features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
tonic = { workspace = true, optional = true }
url = "2.2"

[target.'cfg(unix)'.dependencies]
fuser = { workspace = true, optional = true }

[build-dependencies]
protobuf-src = { version = "1.0.5", optional = true } # protoc @ 3.19.3
tonic-build = "0.8"
