[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spfs"
version = "0.34.6"

[features]
default = []

# If enabled, will create the "local" repository in a subdirectory
# of the standard storage root, named "ci/pipeline_${CI_PIPELINE_ID}".
gitlab-ci-local-repo-isolation = []
sentry = ["dep:sentry"]
server = ["hyper/server", "tokio-util/codec", "tokio-util/io-util"]
"protobuf-src" = ["dep:protobuf-src"]
fuse-backend = ["dep:fuser"]

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio", "bzip2"] }
async-trait = "0.1.52"
async-recursion = "1.0"
async-stream = "0.3"
cached = { workspace = true }
chrono = { workspace = true }
close-err = "1.0"
colored = "2.0"
config = { workspace = true }
dashmap = { workspace = true }
data-encoding = "2.3"
dirs = { workspace = true }
faccess = "0.2.3"
futures = { workspace = true }
gitignore = "1.0"
glob = { workspace = true }
hyper = { version = "0.14.16", features = ["client"] }
indicatif = { workspace = true }
itertools = "0.10.3"
libc = { workspace = true }
nix = { workspace = true }
nonempty = "0.8.1"
num_cpus = "1.13.1"
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
progress_bar_derive_macro = { workspace = true }
prost = "0.11"
rand = "0.8.5"
relative-path = "1.3"
ring = "0.16.15"
semver = "1.0"
sentry = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = "0.10.1"
spfs-encoding = { path = "../spfs-encoding" }
strum = { workspace = true, features = ["derive"] }
tar = "0.4.30"
tempfile = { workspace = true }
tokio = { version = "1.20", features = [
    "fs",
    "io-util",
    "io-std",
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "signal",
] }
tokio-retry = { workspace = true }
tokio-stream = { version = "0.1", features = ["net", "fs"] }
tokio-util = { version = "0.7.3", features = ["compat", "io"] }
tonic = "0.8"
tracing = { workspace = true }
ulid = "1.0"
unix_mode = "0.1.3"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2.3"
whoami = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
fuser = { workspace = true, optional = true }
procfs = { workspace = true }
caps = "0.5.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = ["Win32_Storage_FileSystem", "Win32_Foundation"]

[build-dependencies]
protobuf-src = { version = "1.0.5", optional = true } # protoc @ 3.19.3
tonic-build = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
rstest = { version = "0.15.0", default_features = false }
serial_test = "0.8.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "spfs_bench"
harness = false
