[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spfs"
version = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = { workspace = true }

[lints]
workspace = true

[features]
default = []

# If enabled, will create the "local" repository in a subdirectory
# of the standard storage root, named "ci/pipeline_${CI_PIPELINE_ID}".
gitlab-ci-local-repo-isolation = []
sentry = ["dep:sentry"]
server = ["hyper/server", "tokio-util/codec", "tokio-util/io-util"]
"protobuf-src" = ["dep:protobuf-src"]
fuse-backend = ["dep:fuser"]
winfsp-backend = []

[dependencies]
arc-swap = { workspace = true }
async-compression = { version = "0.3.15", features = ["bzip2", "tokio"] }
async-recursion = "1.0"
async-stream = "0.3"
async-trait = "0.1.52"
bytes = { workspace = true }
cached = { workspace = true }
chrono = { workspace = true }
close-err = "1.0"
colored = "2.0"
config = { workspace = true }
dashmap = { workspace = true }
data-encoding = "2.3"
derive_builder = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
enum_dispatch = { workspace = true }
faccess = "0.2.3"
flatbuffers = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
gitignore = "1.0"
glob = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
miette = { workspace = true }
nix = { workspace = true, features = ["fs"] }
nonempty = "0.8.1"
num_cpus = "1.13.1"
once_cell = { workspace = true }
parsedbuf = { path = "../parsedbuf" }
pin-project-lite = { workspace = true }
progress_bar_derive_macro = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
relative-path = { workspace = true, features = ["serde"] }
ring = { workspace = true }
semver = "1.0"
sentry = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = "0.10.1"
serde_yaml = { workspace = true }
shellexpand = { workspace = true }
spfs-encoding = { workspace = true }
spfs-proto = { path = "../spfs-proto", features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
tar = "0.4.30"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-retry = { workspace = true }
tokio-stream = { version = "0.1", features = ["fs", "net"] }
tokio-util = { version = "0.7.3", features = ["compat", "io"] }
tonic = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unix_mode = "0.1.3"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2.3"
whoami = { workspace = true }

[target.'cfg(unix)'.dependencies]
fuser = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.3"
linux-raw-sys = "0.8.0"
linux-syscall = "1.0.0"
procfs = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
features = ["Win32_Foundation", "Win32_Storage_FileSystem"]
version = "0.51"

[build-dependencies]
protobuf-src = { version = "1.0.5", optional = true } # protoc @ 3.19.3
tonic-build = { workspace = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
rstest = { workspace = true }
serial_test = { workspace = true }
static_assertions = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "spfs_bench"
harness = false
