[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spk-build"
version = { workspace = true }

[lints]
workspace = true

[features]
migration-to-components = [
    "spk-exec/migration-to-components",
    "spk-solve/migration-to-components",
    "spk-schema/migration-to-components",
    "spk-storage/migration-to-components",
]
sentry = ["spk-solve/sentry"]

[dependencies]
async-trait = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
relative-path = "1.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
spfs = { path = "../spfs" }
spk-exec = { path = "../spk-exec" }
spk-solve = { path = "../spk-solve" }
spk-schema = { path = "../spk-schema" }
spk-storage = { path = "../spk-storage" }
strum = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tar = "0.4.30"
tempfile = { workspace = true }
