[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-cli-common"
version = "0.36.0"

[lib]
name = "spk_cli_common"
path = "src/lib.rs"

[features]
sentry = ["dep:sentry", "dep:sentry-anyhow", "dep:sentry-tracing"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
colored = "2.0.0"
futures = "0.3.9"
glob = "0.3.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
serde_json = "1.0.57"
serde_yaml = "0.8.17"
sentry = { version = "0.27.0", optional = true }
sentry-anyhow = { version = "0.27.0", optional = true }
sentry-tracing = { version = "0.27.0", optional = true }
spfs = { version = '0.34.6', path = "../spfs" }
spk-build = { path = '../spk-build' }
spk-exec = { path = '../spk-exec' }
spk-foundation = { path = "../spk-foundation" }
spk-ident = { path = '../spk-ident' }
spk-solver = { path = '../spk-solver' }
spk-solver-solution = { path = '../spk-solver-solution' }
spk-spec = { path = '../spk-spec' }
spk-storage = { path = '../spk-storage' }
spk-validators = { path = '../spk-validators' }
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
whoami = "1.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.24.1"

[dev-dependencies]
rstest = "0.15.0"